[package]
name = "illumos-image-builder"
version = "0.0.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>", "the illumos project"]
edition = "2018"
license = "MPL-2.0"

[[bin]]
name = "image-builder"
path = "src/main.rs"

[dependencies]
anyhow = "1"
libc = "0.2"
jmclib = { "git" = "https://github.com/jclulow/rust-jmclib" }
getopts = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
