[package]
name = "illumos-image-builder"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "image-builder"
path = "src/main.rs"

[dependencies]
anyhow = "1"
digest = "0.9"
getopts = "0.2"
glob = "0.3"
jmclib = { "git" = "https://github.com/jclulow/rust-jmclib" }
libc = "0.2"
libdevinfo-sys = "1"
md-5 = "0.9"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha-1 = "0.9"
uuid = { version = "0.8", features = [ "serde", "v4" ] }
walkdir = "2"
